# Talos

./: .gitignore  README.md  agent_test_tasks.json  app.py  pyproject.toml  sample_files.csv  sample_task.json
sample_code/: sample1.py  sample2.py  sample3.py
talos/: __init__.py  logger.py  main.py
talos/core/: context_manager.py  file_manager.py  parallel_executor.py  task_manager.py  vertex_ai_client.py
talos/i18n/: __init__.py  en.json  ja.json  ko.json  zh.json
test_agent/: README.md  config.py  main.py
test_agent/utils/: __init__.py  data_processor.py  file_handler.py
