[project]
name = "talos"
version = "0.1.0"
description = "AI-powered file management and task execution system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.28.0",
    "google-cloud-aiplatform>=1.36.0",
    "pandas>=2.1.0",
    "asyncio",
    "aiofiles>=23.2.1",
    "pydantic>=2.4.0",
    "click>=8.1.7",
    "rich>=13.6.0",
    "watchdog>=3.0.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.0",
    "plotly>=5.0.0",
    "nest-asyncio>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "mypy>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
talos = "talos.main:main"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
